@@ -5,74 +5,66 @@ import com.financeassistant.financeassistant.dto.TransactionDTO;
 import com.financeassistant.financeassistant.entity.Company;
 import com.financeassistant.financeassistant.entity.Transaction;
 import com.financeassistant.financeassistant.repository.TransactionRepository;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.cache.annotation.CacheEvict;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.PersistenceContext;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
-@Slf4j
 @Service
-@RequiredArgsConstructor
 public class TransactionService {
 
-    private final TransactionRepository     transactionRepository;
-    private final TransactionEventPublisher eventPublisher;
+    @Autowired
+    private TransactionRepository repo;
 
-    // ── Get all transactions for a company ────────────────────────────────────
+    @Autowired
+    private TransactionEventPublisher eventPublisher;
+
+    @Autowired
+    private ReportingService reportingService;
+
+    @PersistenceContext
+    private EntityManager em;
+
+    // ── FIX 1: Renamed from findByCompany → getTransactions (matches TransactionController)
+    //           Removed Pageable — TransactionRepository has no Pageable overload
     public List<TransactionDTO> getTransactions(Long companyId) {
-        return transactionRepository
-                .findByCompanyId(companyId)
+        return repo.findByCompanyIdOrderByDateDesc(companyId)
                 .stream()
                 .map(this::toDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    // ── Create and save a new transaction ─────────────────────────────────────
+    // ── FIX 2: Renamed from create → createTransaction (matches TransactionController)
     @Transactional
-    @CacheEvict(value = "pnl", allEntries = true)
-    public TransactionDTO createTransaction(Long companyId,
-                                            CreateTransactionRequest request) {
-        log.info("Creating transaction companyId={} amount={}",
-                companyId, request.getAmount());
+    public TransactionDTO createTransaction(Long companyId, CreateTransactionRequest req) {
+        Transaction tx = new Transaction();
+        tx.setCompany(em.getReference(Company.class, companyId));
+        tx.setDate(req.getDate());
+        tx.setAmount(req.getAmount());
+        tx.setDescription(req.getDescription());
+        Transaction saved = repo.save(tx);
 
-        // Use company reference by ID only — avoids needing @Builder on Company
-        Company company = new Company();
-        company.setId(companyId);
+        // ── FIX 3: publishNewTransaction (singular) — matches TransactionEventPublisher exactly
+        eventPublisher.publishNewTransaction(companyId, saved.getId());
 
-        Transaction txn = new Transaction();
-        txn.setCompany(company);
-        txn.setDate(request.getDate());
-        txn.setAmount(request.getAmount());
-        txn.setDescription(request.getDescription());
-        txn.setSource("MANUAL");
-
-        Transaction saved = transactionRepository.save(txn);
-        log.info("Saved transaction id={}", saved.getId());
-
-        // Publish event to RabbitMQ for async AI anomaly detection
-        // Wrapped in try/catch — RabbitMQ being down must NEVER block saving
-        try {
-            eventPublisher.publishNewTransaction(companyId, saved.getId());
-        } catch (Exception e) {
-            log.warn("RabbitMQ publish skipped (non-critical): {}", e.getMessage());
-        }
+        // ── Evict P&L cache so Dashboard shows fresh data after every new transaction
+        reportingService.evictPnLCache(companyId);
 
         return toDTO(saved);
     }
 
-    // ── Entity → DTO mapping ──────────────────────────────────────────────────
-    private TransactionDTO toDTO(Transaction txn) {
-        TransactionDTO dto = new TransactionDTO();
-        dto.setId(txn.getId());
-        dto.setDate(txn.getDate() != null ? txn.getDate().toString() : null);
-        dto.setAmount(txn.getAmount());
-        dto.setDescription(txn.getDescription());
-        dto.setCategoryName(
-                txn.getCategory() != null ? txn.getCategory().getName() : null
+    // ── Maps Transaction entity → TransactionDTO for the REST response
+    private TransactionDTO toDTO(Transaction t) {
+        return new TransactionDTO(
+                t.getId(),
+                t.getDate().toString(),         // LocalDate → "YYYY-MM-DD" String
+                t.getAmount(),
+                t.getDescription(),
+                t.getCategory() != null ? t.getCategory().getName() : null
         );
-        return dto;
     }
 }
